--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Elite Events Agency</title>
+  <title>City Unique Event Management</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
-    <h1>Elite Events Agency</h1>
+    <h1>City Unique Event Management</h1>
     <nav>
       <a href="#services">Services</a>
       <a href="#portfolio">Portfolio</a>
@@ -48,7 +48,7 @@
   </section>
 
   <footer>
-    <p>&copy; 2025 Elite Events. All rights reserved.</p>
+    <p>&copy; 2025 City Unique Event Management. All rights reserved.</p>
   </footer>
 </body>
 </html>
